<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:layout_marginTop="200dp">

        <TextView
            android:id="@+id/textEntrance"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:text="@string/textEntrance"
            android:textSize="40sp"
            android:textColor="#008000"
            android:layout_marginBottom="40dp"/>

        <EditText
            android:id="@+id/textEditLogin"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:hint="@string/login"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/textEditPassword"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:hint="@string/password"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginTop="14dp"
            android:text="@string/btnEntranceTwo"
            android:textSize="15sp"
            android:layout_gravity="center"/>
        <Button
            android:id="@+id/btnBack"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginTop="140dp"
            android:text="@string/btnBack"
            android:textSize="15sp"
            android:layout_gravity="center"/>

    </LinearLayout>
</LinearLayout>