<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:layout_marginTop="200dp">

            <TextView
                android:id="@+id/textTraining"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:text="@string/training"
                android:textSize="40sp"
                android:textColor="@color/black"
                android:layout_marginBottom="50dp"/>

            <Button
                android:id="@+id/btnEntrance"
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:layout_margin="1dp"
                android:text="@string/btnEntrance"
                android:textSize="15sp"
                android:layout_gravity="center" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:layout_margin="1dp"
                android:text="@string/btnRegister"
                android:textSize="15sp"
                android:layout_gravity="center" />

            <Button
                android:id="@+id/btnAboutProgram"
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:layout_marginTop="140dp"
                android:text="@string/btnAboutProgram"
                android:textSize="15sp"
                android:layout_gravity="center"/>

        </LinearLayout>
</LinearLayout>